# fb2-converter

./: .gitignore  README.en.md  README.md  README.ru.md  pyproject.toml  requirements.txt
data/: title-patterns.txt
src/fb2_converter/: __init__.py  epub_to_fb2.py  fb2.py
src/fb2_converter/internal/: encoding_detector.py  title_matcher.py
src/fb2converter/: fb2.py  pdf_to_fb2.py  txt_to_fb2.py
src/fb2converter/internal/: encoding_detector.py  text_cleaner.py
