[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fb2converter"
version = "1.0.0"
description = "Simple converter from TXT and PDF to FictionBook 2.0 (FB2) format"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}
